# isort

./: .appveyor.yml  .coveragerc  .cruft.json  .deepsource.toml  .dockerignore  .editorconfig  .env  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pymon  .readthedocs.yaml  .travis.yml  .undertake  404.html  =0.13.9  ACKNOWLEDGEMENTS.md  CHANGELOG.html  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  appveyor.yml  index.html  isort_kate_plugin.py  kate_plugin.py  mkdocs.yml  mypy-requirements.txt  params.json  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  sitemap.xml  (+7 more)
.github/: FUNDING.yml  dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: constraints.txt  continuous-integration.yml  docs.yml  hatch-constraints.txt  integration.yml  labeler.yml  lint.yml  poetry-constraints.txt  release-dev.yml  release-drafter.yml  release.yml  test.yml  tests.yml
CHANGELOG/: index.html
art/: logo.xcf  logo_large.xcf
art/stylesheets/: extra.css
assets/javascripts/: bundle.6627ddf3.min.js  bundle.6627ddf3.min.js.map  vendor.2d1db4bd.min.js  vendor.2d1db4bd.min.js.map
assets/stylesheets/: main.01afc2df.min.css  main.01afc2df.min.css.map  main.36ee6aaa.min.css  main.36ee6aaa.min.css.map  main.d3202873.min.css  main.d3202873.min.css.map  palette.83bccb1f.min.css  palette.83bccb1f.min.css.map
docs/: changelog.rst  conf.py  index.md  index.rst  requirements.txt
docs/configuration/: action_comments.html  action_comments.md  add_or_remove_imports.html  add_or_remove_imports.md  black_compatibility.html  black_compatibility.md  compatibility_black.md  config_files.html  config_files.md  custom_sections_and_ordering.html  custom_sections_and_ordering.md  git_hook.html  git_hook.md  github_action.html  github_action.md  multi_line_output_modes.html  multi_line_output_modes.md  options.html  options.md  pre-commit.html  pre-commit.md  profiles.html  profiles.md  setuptools_integration.html  setuptools_integration.md
docs/contributing/: 1.-contributing-guide.html  1.-contributing-guide.md  2.-coding-standard.html  2.-coding-standard.md  3.-code-of-conduct.html  3.-code-of-conduct.md  4.-acknowledgements.html  4.-acknowledgements.md
docs/howto/: shared_profiles.html  shared_profiles.md
docs/interactive/: interactive.css  interactive.js  isort-5.0.0-py3-none-any.whl  try.md
docs/major_releases/: introducing_isort_5.html  introducing_isort_5.md  release_policy.html  release_policy.md
docs/quick_start/: 0.-try.html  0.-try.md  1.-install.html  1.-install.md  2.-cli.html  2.-cli.md  3.-api.html  3.-api.md  interactive.js  isort-5.0.0-py3-none-any.whl  isort-5.0.1-py3-none-any.whl
docs/reference/: isort.rst
docs/upgrade_guides/: 5.0.0.html  5.0.0.md
docs/warning_and_error_codes/: W0500.html  W0500.md
example_isort_formatting_plugin/: example_isort_formatting_plugin.py  pyproject.toml
example_isort_sorting_plugin/: example_isort_sorting_plugin.py  pyproject.toml
example_shared_isort_profile/: example_shared_isort_profile.py  pyproject.toml
isort/: __init__.py  __main__.py  _importmagic.py  _parse_utils.py  _version.py  api.py  comments.py  compat.py  core.py  exceptions.py  files.py  finders.py  format.py  formatter.py  hooks.py  identify.py  io.py  isort.py  isort2.py  literal.py  logo.py  main.py  natural.py  new_wrap  new_wrap_line  old_wrap_line  output.py  parse.py  pie_slice.py  place.py  profiles.py  pylama_isort.py  sections.py  settings.py  setuptools_commands.py  sorting.py  utils.py  wrap.py  wrap_modes.py
isort/_future/: __init__.py  _dataclasses.py
isort/deprecated/: finders.py
isort/imports/: extract.py  output.py  parse.py
isort/parso/: fst.py  grammar37.txt  parser.py  tokenizer.py
isort/stdlibs/: __init__.py  py2.py  py27.py  py3.py  py310.py  py311.py  py312.py  py313.py  py314.py  py315.py  py35.py  py36.py  py37.py  py38.py  py39.py  py_three.py  py_two.py
isort/vast/: __init__.py  handlers.py  parser.py  router.py
kate_plugin/: isort_plugin.py  isort_plugin_old.py  isort_plugin_ui.rc  katepart_isort.desktop
reference/isort/: api.html  comments.html  core.html  exceptions.html  files.html  format.html  hooks.html  identify.html  index.html  io.html  literal.html  logo.html  main.html  output.html  parse.html  place.html  profiles.html  pylama_isort.html  sections.html  settings.html  setuptools_commands.html  sorting.html  utils.html  wrap.html  wrap_modes.html
rtd/: index.md
scripts/: before_install.sh  build_config_option_docs.py  build_profile_docs.py  check_acknowledgments.py  clean.sh  docker.sh  done.sh  isort  lint.sh  mkstdlibs.py  test.sh  test_integration.sh
search/: search_index.json
stylesheets/: stylesheet.css
testing/: .isort.cfg  my_file.py  my_file2.py
tests/: conftest.py  fuzz_isort.dict  fuzz_isort.py  test_action_comments.py  test_api.py  test_comments.py  test_deprecated_finders.py  test_exceptions.py  test_finders.py  test_format.py  test_hooks.py  test_hypothesmith.py  test_importable.py  test_integration.py  test_io.py  test_isort.py  test_literal.py  test_main.py  test_output.py  test_parse.py  test_place.py  test_pylama_isort.py  test_regressions.py  test_settings.py  test_setuptools_command.py  test_ticketed_features.py  test_wrap_modes.py
tests/benchmark/: test_api.py
tests/integration/: conftest.py  test_hypothesmith.py  test_literal.py  test_projects_using_isort.py  test_setting_combinations.py  test_ticketed_features.py
tests/unit/: conftest.py  example_crlf_file.py  test_action_comments.py  test_api.py  test_comments.py  test_deprecated_finders.py  test_exceptions.py  test_files.py  test_format.py  test_hooks.py  test_identify.py  test_importable.py  test_io.py  test_isort.py  test_lazy_imports.py  test_literal.py  test_main.py  test_output.py  test_parse.py  test_place.py  test_pylama_isort.py  test_regressions.py  test_settings.py  test_setuptools_command.py  test_ticketed_features.py  test_utils.py  test_wrap.py  test_wrap_modes.py  utils.py
المستندات/ترتيب/: config_files.md
(+133 files in other folders)
