[tool.black]
line-length = 100

[tool.poetry]
name = "isort"
version = "5.13.2"
description = "A Python utility / library to sort Python imports."
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pycqa/isort"
homepage = "https://pycqa.github.io/isort/"
documentation = "https://pycqa.github.io/isort/"
keywords = ["Refactor", "Lint", "Imports", "Sort", "Clean"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
urls = { Changelog = "https://github.com/pycqa/isort/blob/main/CHANGELOG.md" }
include = [
    { path = "tests", format = "sdist" },
    { path = "ACKNOWLEDGEMENTS.md", format = "sdist" },
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8.0"
colorama = {version = ">=0.4.6", optional = true}

[tool.poetry.extras]
colors = ["colorama"]
plugins = ["setuptools"]

[tool.poetry.dev-dependencies]
bandit = ">=1.7.7"
black = "24.3.0"
colorama = ">=0.4.6"
coverage = {version = ">=6.5.0", extras = ["toml"]}
cruft = ">=2.12.0"
example-isort-sorting-plugin = ">=0.1.0"
example-shared-isort-profile = ">=0.1.0"
flake8 = ">=3.8.4"
flake8-bugbear = ">=22.12.6,<23.0.0"
httpx = ">=0.13.3"
hypothesmith = ">=0.1.3"
#hypothesis-auto = { version = ">=1.0.0" }
hypothesis = ">=6.10.1"
ipython = ">=7.16"
mypy = ">=0.902,<1.0.0"
pytest = ">=7.4.2"
pytest-mock = ">=1.10"
pep8-naming = ">=0.8.2"
portray = ">=1.8.0"
requirementslib = ">=1.5"
pipreqs = ">=0.4.9"
pip_api = ">=0.0.12"
pylama = ">=7.7"
pip = ">=21.1.1"
py = ">=1.11.0"
safety = ">=2.2.0"
smmap2 = ">=3.0.1"
libcst = ">=0.3.18"
mypy-extensions = ">=0.4.3"
pre-commit = ">=2.13.0"
pytest-benchmark = ">=3.4.1"
toml = ">=0.10.2"
types-pkg-resources = ">=0.1.2"
types-colorama = ">=0.4.2"
types-toml = ">=0.1.3"
vulture = ">=1.0"

[tool.coverage.paths]
source = [
    "isort/",
    ".tox/*/lib/python*/site-packages/isort/",
    ".tox/*/lib/site-packages/isort/"
]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["isort", "tests"]
omit = [
    "isort/_vendored/*",
    "tests/*",
    "isort/deprecated/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 99
exclude_lines = [
    "pragma: no cover",
    "except ImportError:",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.poetry.scripts]
isort = "isort.main:main"
isort-identify-imports = "isort.main:identify_imports_main"

[tool.poetry.plugins."distutils.commands"]
isort = "isort.setuptools_commands:ISortCommand"

[tool.poetry.plugins."pylama.linter"]
isort = "isort.pylama_isort:Linter"

[tool.portray.mkdocs]
edit_uri = "https://github.com/pycqa/isort/edit/main/"
extra_css = ["art/stylesheets/extra.css"]

[tool.portray.mkdocs.theme]
name = "material"
favicon = "art/logo.png"
logo = "art/logo.png"
palette = {scheme = "isort"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
strict = true
follow_imports = "silent"
exclude = "isort/_vendored|tests/unit/example_projects|tests/unit/example_crlf_file.py"

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
allow_incomplete_defs = true
allow_untyped_calls = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "tests"]
skip = [
    "tests/unit/example_crlf_file.py"
]
