[bdist_wheel]
universal = 1

[flake8]
max-line-length = 160
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    E127,E128

[metadata]
license_file = LICENSE
