[flake8]
max-line-length = 160
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    E127,E128,
    # W504 line break after binary operator
    W504

[metadata]
license_file = LICENSE

[mypy]
follow_imports = silent
ignore_missing_imports = True
strict_optional = True
warn_no_return = False
check_untyped_defs = True
allow_redefinition = True

[mypy-test_isort]
strict_optional = False

[mypy-isort.isort]
strict_optional = False

[tool:pytest]
testpaths = test_isort.py
