[tool.poetry]
name = "example_isort_formatting_plugin"
version = "0.1.1"
description = "An example plugin that modifies isort formatting using black."
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"

[tool.poetry.plugins."isort.formatters"]
example = "example_isort_formatting_plugin:black_format_import_section"

[tool.poetry.dependencies]
python = ">=3.10.0"
isort = ">=5.12.0"
black = ">=24.3.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
