[project]
name = "example_isort_formatting_plugin"
version = "0.1.1"
description = "An example plugin that modifies isort formatting using black."
authors = [{name = "Timothy Crosley", email = "timothy.crosley@gmail.com"}, {name = "staticdev", email = "staticdev-support@proton.me"}]
license = "MIT"
requires-python = ">=3.9.0"
dependencies = [
    "isort>=5.13.2",
    "black>=24.3.0",
]

[project.entry-points."isort.formatters"]
example = "example_isort_formatting_plugin:black_format_import_section"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
