[tool.poetry]
name = "example_isort_sorting_plugin"
version = "0.0.2"
description = "An example plugin that modifies isorts sorting order to provide an even more natural sort by utilizing natsort."
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"

[tool.poetry.plugins."isort.sort_function"]
natural_plus = "example_isort_sorting_plugin:natural_plus"

[tool.poetry.dependencies]
python = "^3.6"
natsort = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
