[project]
name = "example_isort_sorting_plugin"
version = "0.1.0"
description = "An example plugin that modifies isorts sorting order to provide an even more natural sort by utilizing natsort."
authors = [{name = "Timothy Crosley", email = "timothy.crosley@gmail.com"}, {name = "staticdev", email = "staticdev-support@proton.me"}]
license = "MIT"
requires-python = ">=3.9.0"
dependencies = [
    "natsort>=7.1.1"
]

[project.entry-points."isort.sort_function"]
natural_plus = "example_isort_sorting_plugin:natural_plus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
