[tool.poetry]
name = "example_shared_isort_profile"
version = "0.0.1"
description = "An example shared isort profile"
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"

[tool.poetry.plugins."isort.profiles"]
example = "example_shared_isort_profile:PROFILE"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
