[tool.poetry]
name = "example_shared_isort_profile"
version = "0.1.0"
description = "An example shared isort profile"
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"

[tool.poetry.plugins."isort.profiles"]
example = "example_shared_isort_profile:PROFILE"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
