[project]
name = "example_shared_isort_profile"
version = "0.1.0"
description = "An example shared isort profile"
authors = [{name = "Timothy Crosley", email = "timothy.crosley@gmail.com"}, {name = "staticdev", email = "staticdev-support@proton.me"}]
license = "MIT"
requires-python = ">=3.9.0"

[project.entry-points."isort.profiles"]
example = "example_shared_isort_profile:PROFILE"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
